# htorrent

./: .gitignore  Makefile  README.md  arch-spec-0.3.pdf.torrent  htorrent.cabal  stack.yaml
app/: Main.hs
profiling/big/: htorrent.prof
profiling/small/: htorrent.prof
src/: BEncode.hs  FSM.hs  FileManager.hs  Lib.hs  Main.hs  Parser.hs  Peer.hs  RPCMessages.hs  Server.hs  Shared.hs  Tracker.hs  Utils.hs  WebSocket.hs  web.hs  websocket.hs
test/: Spec.hs  example.torrent
test/vcr/: unparsed.txt
web/: index.html  index.js
