name:                htorrent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/htorrent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BEncode
                     , Lib
                     , Server
                     , Tracker
                     , Utils
                     , Peer
                     , FileManager
                     , Shared
                     , FSM
                     , Parser
                     , RPCMessages
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , base16-bytestring
                     , binary
                     , bitwise
                     , bytestring
                     , clock
                     , containers
                     , cryptonite
                     , deepseq
                     , directory
                     , filepath
                     , http-conduit
                     , memory
                     , network
                     , optparse-applicative
                     , random
                     , stm
                     , text
                     , time
                     , unix
                     , unix-bytestring
                     , utf8-string
                     , word8
                     , wai >= 3.2.1.2
                     , warp
                     , websockets
                     , http-types 
                     , uuid
  default-language:    Haskell2010

executable htorrent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , htorrent
                     , bytestring
                     , containers
                     , utf8-string
                     , unix
  default-language:    Haskell2010

test-suite htorrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , htorrent
                     , directory
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , hspec
                     , checkers
                     , containers
                     , utf8-string
                     , bytestring
                     , http-conduit
                     , word8


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/htorrent
